# ambrouse-spam_audio_video_v2

./: .gitattributes  .gitignore  README.md
.github/workflows/: ci.yml
docs/: native_full_timeline_2026-05-17.md  native_renderer_8x_loop_2026-05-17.md  portable_windows_release.md  release_notes_v0.1.3.md  release_notes_v0.1.4.md  release_notes_v0.1.5.md  release_notes_v0.1.6.md  render_video_vfx_audio_visualizer_2026-05-13.md  setup_release_validation_2026-05-17.md  spam_audio_video_bridge_gpu_refactor_2026-05-13.md  video_audio_8x4x_optimization_2026-05-16.md
logs/spam_audio_video/: 2026-05-13-bridge-gpu-refactor.md  2026-05-13-render-video-vfx-audio-visualizer.md  2026-05-14-gpu-runtime-hardening.md  2026-05-16-end-to-end-30s-benchmark.md  2026-05-16-fast-4k60-render-pipeline.md  2026-05-16-native-gpu-8x12x-renderer.md  2026-05-16-video-audio-8x4x-optimization.md  2026-05-17-native-clip-end-audio-hotfix.md  2026-05-17-native-full-timeline-main.md  (+5 more)
plans/: plan-fastest-4k60-render-pipeline.md  plan-native-gpu-8x12x-4k60-renderer.md  plan-render-video-vfx-audio-visualizer.md  plan-spam-audio-video-bridge-gpu-refactor.md  plan-video-audio-8x4x-quality-preserving-optimization.md
spam_audio_video/: .env.example  .gitignore  README.md  clear.sh  setup.sh
spam_audio_video/native_renderers/story_gpu_renderer/: Cargo.toml  README.md
spam_audio_video/native_renderers/story_gpu_renderer/src/: cli.rs  config.rs  main.rs  native_encode.rs  native_probe.rs  native_story.rs  renderer.rs  report.rs
toll-brouser-gpt-gemini/: .env.example  .gitignore  README.md  setup.sh
(+119 files in other folders)
